tests/transpiler/x/java/outer_join.error
exit status 1
Main.java:38: error: incompatible types: Data2 cannot be converted to boolean
            if (row.order) {
                   ^
Main.java:39: error: incompatible types: Object cannot be converted to boolean
                if (row.customer) {
                       ^
Main.java:40: error: cannot find symbol
                    System.out.println("Order" + " " + row.order.id + " " + "by" + " " + row.customer.name + " " + "- $" + " " + row.order.total);
                                                                                                     ^
  symbol:   variable name
  location: variable customer of type Object
Main.java:45: error: cannot find symbol
                System.out.println("Customer" + " " + row.customer.name + " " + "has no orders");
                                                                  ^
  symbol:   variable name
  location: variable customer of type Object
4 errors
